assets/css/style.css
* {
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Playfair Display', serif;
    background-color: #EAE2B7;
    font-size: 16px;
    font-weight: 400;
    line-height: 1.5;
    color: #000;
}

/* ----------- Navigation Bar ----------- */
.bg-light {
    background-color: #EAE2B7 !important;
    -webkit-box-shadow: 0 0.5em 1.1em rgba(0, 0, 0, 0.25);
            box-shadow: 0 0.5em 1.1em rgba(0, 0, 0, 0.25);
}

.logo {
    width: 50px;
    height: auto;
}

.navbar-brand {
    font-family: "Courgette", cursive;
    color: #000;
}

.navbar-brand:hover {
    color: #000;
}

.navbar-expand-lg .navbar-nav .nav-link {
    padding-right: 0;
    padding-left: 0;
}

.navbar-nav .nav-link {
    color: #000;
}

.navbar .navbar-toggler {
    border: none;
}

.hvr-underline-from-center:before {
    background: #003049;
    height: 2px;
}

/* add margin to nav-links to devices that have min-width: 992px */
@media (min-width:992px){
    .nav-link {
        margin-left: 15px;
        margin-right: 15px;
    }
}

/* remove navbar-brand text for small devices */
@media (max-width:575px) {
    .navbar-brand {
        font-size: 0px;
    }
}

/* ----------- Footer  ----------- */
footer {
    padding: 15px 0 0;
    color: #fff;
    background-color: #003049;
    font-size: 14px;
    line-height: 2;
}

.footer-links {
    list-style: none;
}

.footer-links a {
    text-decoration: none;
    color: #fff;
}

.footer-links a:hover {
    color: #EAE2B7;
}

.contact-links, .support-links {
    margin-bottom: 20px;
    padding: 0;
}

.contact-links-item, .support-links-item {
    display: block;
}

.contact-links i {
    margin-right: 5px;
}

/* ----------- code and modified from Matt Rudge bootstrap mini project "Resume Project" Code Institute ----------- */
.social-icon-links li a i {
    color: #000;
    background: #EAE2B7;
    width: 42px;
    height: 42px;
    padding-top: 12px;
    border-radius: 50%;
    font-size: 18px;
    text-align: center;
    transition: all 0.4s ease-in-out;
    -moz-transition: all 0.4s ease-in-out;
    -webkit-transition: all 0.4s ease-in-out;
    -o-transition: all 0.4s ease-in-out;
}

.social-icon-links li a i:hover {
    background: #FCBF49;
    color: #fff;
}

.footer-copyright {
    border-top: 1px solid #FCBF49;
    font-size: 12px;
}

.footer-copyright-col {
    padding: 1rem;
}

.main-container {
    margin-top: 60px;
}

/* ----------- Carousel ----------- */
.carousel-item {	
    /* max-height: 90vh; */
    height: 90vh;
    overflow: hidden;
}

.carousel-item > img {
    width: 100%;
    height: 90vh;
    object-fit: cover;
}

/* code taken and modified for image animation from Brian O'Grady Love Running Code Institute*/
.carousel-item.active img {
    animation: hero-zoom;
    animation-duration: 6s;
    animation-fill-mode: forwards;
}

@keyframes hero-zoom {
    from {
        transform: scale(1);
    }
    to {
        transform: scale(1.1);
    }
}

/* code taken and modified from Matt Rudge "Whiskey Drop Project" Code Institute */
.carousel-item-text {
    position: absolute;
    background-color: rgba(0, 0, 0, 0.5);
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    z-index: 3;
}

.jumbotron {
    padding: 20px;
    margin: 0;
    position: relative;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background: transparent;
    color: #fff;
    font-family: "Courgette", cursive;
}

.jumbotron h3 {
    margin: 0;
}

@media (max-width:575px) {
    .jumbotron h3 {
        font-size: 1rem;
    }
}

/* ----------- Madia Queries ----------- */
@media (max-width:767px){
    .footer-copyright-col {
        padding: 0.5rem;
    }
}

@media (max-width:575px){
    .footer-heading {
        text-align: center;
    }

    .social-icon-links {
        padding-bottom: 15px;
    }
}

